:sparkles: (components/landfill) add post to detections api
