# app/stacks/components/landfills/api-services/detections/src/validations/index.ts
@@ -1,0 +1,8 @@
+import { z } from "zod";
+
+export const landfillSchema = z.object({
+    municipality_id: z.number(),
+    detected_from: z.string(),
+    detection_time: z.string(),
+    geometry: z.any(),
+});
